--- a/tuning_interface.html
+++ b/tuning_interface.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Gemini Prosthetic Interface</title>
+    <title>Robotic Prosthetic Interface</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body { font-family: sans-serif; background: #1a1a1a; color: white; display: grid; grid-template-columns: 300px 1fr; gap: 20px; padding: 20px; }
